Init all order reminder functionalities

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "rapidez/order-reminder",
+    "description": "This package provides functionality within Rapidez to create order reminders for customers, prompting them to reorder products after a specified period.",
     "keywords": [
         "rapidez",
-        ":package_slug"
+        "order-reminder"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/rapidez/order-reminder",
     "license": "GPL-3.0",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Claudio Ferraro",
+            "email": "claudio@justbetter.nl",
             "role": "Developer"
         }
     ],
@@ -18,11 +18,12 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.1|^8.2",
-        "rapidez/core": "^1.0"
+        "rapidez/core": "^2.0",
+        "rapidez/account": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "Rapidez\\OrderReminder\\": "src"
         }
     },
     "config": {
@@ -31,7 +32,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Rapidez\\OrderReminder\\OrderReminderServiceProvider"
             ]
         }
     }
